Fix Book Description Visibility 💄

--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -269,7 +269,7 @@ video {
     outline: var(--brown) solid 5px;
     border-radius: 5px;
     box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
-    /*opacity: 0;*/
+    opacity: 0;
     transition: opacity 300ms ease-in-out, visibility 0.3s ease-in-out;
 }
 
